--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,8 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
-* {
-    padding: 0;
+:root {
+    --jigswap-red: #A12B44;
+    --jigswap-blue: #0E5896;
+    --jigswap-yellow: #FDD642;
+    --jigswap-white: #f2f2f2;
+    --jigswap-black: #242424;
+  }
+  
+  * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: "DM Sans", sans-serif;
-}
+  }
+  
+  body {
+    height: 100dvh;
+    background-color: var(--jigswap-white);
+  }
+  
+  @media screen and (prefers-color-scheme: dark) {
+    body {
+      background-color: var(--jigswap-black);
+    }
+  }/*# sourceMappingURL=styles.css.map */
