--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,73 +1,60 @@
 @import url("styles.css");
-.container {
+.startup-container {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  background-color: blue;
 }
-.container .header-container {
-  height: 60%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.startup-container .startup-container__top {
+  height: 100vh;
 }
-.container .header-container video {
-  height: auto;
+.startup-container .startup-container__top video {
+  height: 80vh;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   position: absolute;
-  z-index: -1;
-}
-.container .header-container .gradient-overlay {
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0), #242424);
-  position: absolute;
   z-index: 0;
-  padding: 0 1rem;
-  display: flex;
-  justify-content: center;
 }
-.container .header-container .gradient-overlay .header-container__title {
-  color: white;
+.startup-container .startup-container__top .gradient-layout {
+  width: 100%;
+  position: absolute;
   z-index: 1;
-  font-size: 2.5rem;
-  text-align: center;
-  font-weight: 700;
-  position: absolute;
-  bottom: 4rem;
-}
-.container .header-container .gradient-overlay .header-container__description {
-  color: white;
-  z-index: 1;
-  font-size: 1.25rem;
-  text-align: center;
-  font-weight: 400;
-  position: absolute;
-  bottom: 1rem;
-}
-.container .button-container {
-  height: 40%;
-  margin-top: 2vh;
-  position: absolute;
   bottom: 0;
+  height: 50vh;
+  background: linear-gradient(180deg, rgba(36, 36, 36, 0) 0%, var(--jigswap-black) 60%);
+}
+.startup-container .startup-container__elements {
+  width: 100%;
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  bottom: 0;
+  gap: 2rem;
+}
+.startup-container .startup-container__elements h1 {
+  text-align: center;
+  color: white;
+}
+.startup-container .startup-container__elements .startup-container__buttons {
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
   gap: 1rem;
 }
-.container .button-container .button-container__btn {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-  background: var(--jigswap-yellow);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.startup-container .startup-container__elements .startup-container__buttons a {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  font-weight: 800;
+  font-size: 1.3rem;
+}
+.startup-container .startup-container__elements .startup-container__buttons a.signup-button {
+  background-color: var(--jigswap-yellow);
+  color: var(--jigswap-black);
+}
+.startup-container .startup-container__elements .startup-container__buttons a.login-button {
+  border: solid 1px var(--jigswap-yellow);
+  color: var(--jigswap-yellow);
 }/*# sourceMappingURL=app.css.map */
