--- a/assets/css/puzzle.css
+++ b/assets/css/puzzle.css
@@ -53,6 +53,9 @@ body {
   align-items: center;
   overflow-x: scroll;
 }
+.puzzle-piece-container .puzzle-piece-image {
+  pointer-events: none;
+}
 
 .puzzle-piece-image {
   max-width: 100%;
