--- a/assets/css/puzzle.css
+++ b/assets/css/puzzle.css
@@ -36,12 +36,13 @@ body {
   background-color: #fff;
   border: 1px solid #000;
   cursor: move;
+  position: relative;
 }
 
 .pieces-container {
   display: flex;
   gap: 10px;
-  pointer-events: none;
+  overflow-x: auto;
 }
 
 .puzzle-piece-container {
@@ -52,11 +53,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-x: scroll;
-  pointer-events: visible;
+  cursor: move;
 }
-.puzzle-piece-container .puzzle-piece-image {
+
+.puzzle-piece-image {
   max-width: 100%;
   max-height: 100%;
-  pointer-events: none;
 }/*# sourceMappingURL=puzzle.css.map */
