--- a/assets/css/puzzle.scss
+++ b/assets/css/puzzle.scss
@@ -14,6 +14,8 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    width: 100vw;
+    overflow: none;
 }
 
 .timer {
