--- a/assets/css/puzzle.scss
+++ b/assets/css/puzzle.scss
@@ -19,6 +19,8 @@ body {
 }
 
 .timer {
+    position: absolute;
+    top: 6rem;
     font-size: 3rem;
     margin-bottom: 1rem;
 }
@@ -52,6 +54,8 @@ body {
 }
 
 .puzzle-piece-container {
+    position: absolute;
+    bottom: 1rem;
     width: 70px;
     height: 70px;
     background-color: #ddd;
