--- a/assets/css/puzzle.scss
+++ b/assets/css/puzzle.scss
@@ -12,6 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 2rem;
     height: 100vh;
     width: 100vw;
     overflow: none;
