--- a/assets/css/success.css
+++ b/assets/css/success.css
@@ -8,6 +8,15 @@ body {
   align-items: center;
   height: 100vh;
 }
+body .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+  height: 100vh;
+  width: 100vw;
+  overflow: none;
+}
 body .share-button {
   background-color: var(--jigswap-yellow);
   color: var(--jigswap-gray);
