--- a/assets/css/success.scss
+++ b/assets/css/success.scss
@@ -8,6 +8,16 @@ body {
     align-items: center;
     height: 100vh;
 
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 2rem;
+        height: 100vh;
+        width: 100vw;
+        overflow: none;
+    }
+
     .share-button {
         background-color: var(--jigswap-yellow);
         color: var(--jigswap-gray);
